Fixed the wrapping on posts

--- a/style/layout.styl
+++ b/style/layout.styl
@@ -558,13 +558,13 @@ a.blue
 	position relative
 
 	a
-		position static
+		margin-right 28px
 		display inline-block
 		
-.byline
-	position absolute
-	right 6px
-	text-align right
+	.byline
+		display inline-block
+		right 6px
+		text-align right
 
 .post-content
 	padding box_margin*2
@@ -670,7 +670,6 @@ a.permlink
 		text-decoration underline
 
 	span
-		display inline-block
 		float right
 
 .subnav ul li
